Fixed alignment and spacing with badges, more centered for carousel.

--- a/film-finder/src/css/movie-card-css.css
+++ b/film-finder/src/css/movie-card-css.css
@@ -45,7 +45,11 @@ w3-card-4 {
 
 .movie {
     background-color: #282c34;
+}
 
+.badge {
+    text-align: right;
+    margin: 5px 5px 5px 0px;
 }
 
 .welcome-text{
